<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2014-2019 Forrest Guice
    This file is part of SuntimesWidget.

    SuntimesWidget is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    SuntimesWidget is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with SuntimesWidget.  If not, see <http://www.gnu.org/licenses/>.
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent" android:layout_height="wrap_content" android:background="?attr/dialogBackground">

<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="wrap_content">

    <View style="?attr/sheetEdgeWeak" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent" android:layout_height="wrap_content"
        android:layout_marginStart="10dp" android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp" android:layout_marginRight="10dp"
        android:layout_marginTop="8dp" android:layout_marginBottom="12dp">

        <LinearLayout
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:gravity="center">

            <com.forrestguice.support.widget.ImageView
                android:id="@+id/txt_about_icon"
                android:layout_width="48dp" android:layout_height="48dp"
                android:layout_margin="@dimen/aboutIcon_margin"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/txt_about_name"
                android:layout_height="wrap_content" android:layout_width="wrap_content"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                android:text="@string/app_name"
                android:gravity="center" android:textSize="?attr/text_size_xlarge"
                android:textColor="@drawable/btn_datetxt_dark" android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge" />

        </LinearLayout>

        <TextView
            android:id="@+id/txt_about_desc"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:textSize="?attr/text_size_small" android:text="@string/app_shortdesc" />

        <TextView
            android:id="@+id/txt_about_version"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_gravity="start"
            android:text="@string/about_app_version_field" android:textSize="?attr/text_size_small"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:id="@+id/txt_about_support"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/about_app_support_field" />

        <TextView
            android:id="@+id/txt_help_url"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="0dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/help_url"
            android:autoLink="web" />


        <TextView
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="2dp"
            android:id="@+id/txt_about_legal1"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/about_app_sourcecode_field"
            android:autoLink="web" />

        <TextView
            android:id="@+id/txt_about_url"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="0dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/help_app_url"
            android:autoLink="web" />

        <TextView
            android:id="@+id/txt_about_legal2"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/about_translations_field" />

        <TextView
            android:id="@+id/txt_about_legal3"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/about_libraries_field"
            android:autoLink="web" />

        <TextView
            android:id="@+id/txt_about_media"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp" android:layout_marginBottom="2dp"
            android:layout_height="wrap_content" android:layout_width="wrap_content"
            android:text="@string/about_media_field" android:textSize="?attr/text_size_small"
            android:autoLink="web" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp" android:background="?attr/hrColor" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/txt_about_legal4"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            tools:text="Privacy:" android:textSize="?attr/text_size_small"
            android:autoLink="web" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp" android:background="?attr/hrColor" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" />

        <TextView
            android:id="@+id/txt_about_legal5"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/help_privacy_url"
            android:autoLink="web" />

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp" android:background="?attr/hrColor" android:layout_marginTop="4dp" android:layout_marginBottom="4dp" />

    </LinearLayout>
</LinearLayout>
</ScrollView>