...
        <com.forrestguice.support.widget.Toolbar
            android:id="@+id/toolbar" style="@style/AboutToolbarStyle"
            app:layout_scrollFlags="scroll|enterAlways"
            app:title="@string/about_dialog_title" />

        <com.forrestguice.support.widget.TabLayout
            android:id="@+id/tabs" style="@style/AboutTabStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabGravity="fill"
            android:background="?attr/dialogBackground">

            <com.forrestguice.support.widget.TabItem
...
                android:text="@string/about_dialog_privacy" />

        </com.forrestguice.support.widget.TabLayout>
    </com.forrestguice.support.widget.AppBarLayout>

    <com.forrestguice.support.view.ViewPager
        android:id="@+id/container"
        android:layout_width="match_parent" android:layout_height="match_parent"
        android:layout_marginTop="4dp" android:layout_marginBottom="4dp"
        android:layout_marginLeft="?attr/activityMargin" android:layout_marginRight="?attr/activityMargin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</com.forrestguice.support.widget.CoordinatorLayout>
