...
                    android:src="@drawable/ic_96dp_suntimes"
                    android:contentDescription="@string/app_name" />

                <Button android:id="@+id/button_about"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:text="@string/action_about"
                    android:layout_gravity="start|bottom" />

            </LinearLayout>
            
            <TextView
                android:id="@+id/text1" android:textSize="?attr/text_size_large"
...
                android:layout_marginBottom="2dp" android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                android:layout_marginStart="8dp" android:layout_marginLeft="8dp"
                android:animateLayoutChanges="true">

                <CheckBox
                    android:id="@+id/check_donate"
                    android:layout_height="wrap_content" android:layout_width="wrap_content"
                    android:gravity="center_vertical" android:layout_gravity="center_vertical|start"
                    android:button="?attr/checkFavorite" android:paddingLeft="8dp" android:paddingStart="8dp"
                    android:checked="false"
                    tools:ignore="@string/expandMore" />

...
