...
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/about_app_sourcecode_field"
            android:autoLink="web" />

        <TextView
            android:id="@+id/txt_about_url1"
            android:layout_marginStart="4dp" android:layout_marginLeft="4dp"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="0dp"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content" android:textSize="?attr/text_size_small"
            android:text="@string/help_source_url"
...
